Fix html files names

--- a/client/public/sofia-grad-map.html
+++ b/client/public/sofia-grad-map.html
@@ -6,19 +6,30 @@
 </head>
 
 <body>
-<div style="height: 90pt;">
+<div style="height: 70pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="София.jpg" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="Софийска област.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-  <area target="" alt="Желязна руда в село Кремиковци" title="Желязна руда в село Кремиковци" href="" coords="250,172,283,172,266,145" shape="poly">
-  <area target="" alt="Варовик във Витоша" title="Варовик във Витоша" href="" coords="159,276,205,263" shape="rect">
-  <area target="" alt="София" title="София" href="" coords="196,252,199,239,206,247,214,243,221,221,226,239,235,233,245,221,238,211,238,197,244,185,237,174,224,173,205,165,203,151,211,146,216,142,200,141,189,140,189,123,181,126,168,127,163,139,174,143,159,145,148,153,138,174,144,176,144,186,132,188,137,195,130,206,138,208,128,217,134,223,146,221,157,224,167,226,172,236,180,243" shape="poly">
+    <area target="" alt="Лигнитни въглища до Елин Пелин" title="Лигнитни въглища до Елин Пелин" href="" coords="275,327,297,305" shape="rect">
+    <area target="" alt="Лигнитни въглища до Драгоман" title="Лигнитни въглища до Драгоман" href="" coords="47,166,69,144" shape="rect">
+    <area target="" alt="Лигнитни въглища до Годеч" title="Лигнитни въглища до Годеч" href="" coords="108,74,129,52" shape="rect">
+    <area target="" alt="Медна руда в района на Пирдоп и Златица" title="Медна руда в района на Пирдоп и Златица" href="" coords="460,238,493,224" shape="rect">
+    <area target="" alt="Антрацитни въглища до Своге" title="Антрацитни въглища до Своге" href="" coords="177,155,198,133" shape="rect">
+    <area target="" alt="Огнеупорни глини до Елин Пелин" title="Огнеупорни глини до Елин Пелин" href="" coords="307,245,342,232" shape="rect">
+    <area target="" alt="Самоков" title="Самоков" href="" coords="269,402,17" shape="circle">
+    <area target="" alt="Елин Пелин" title="Елин Пелин" href="" coords="290,264,17" shape="circle">
+    <area target="" alt="Пирдоп" title="Пирдоп" href="" coords="459,260,18" shape="circle">
+    <area target="" alt="Своге" title="Своге" href="" coords="216,132,16" shape="circle">
+    <area target="" alt="Драгоман" title="Драгоман" href="" coords="92,160,17" shape="circle">
+    <area target="" alt="Годеч" title="Годеч" href="" coords="127,119,17" shape="circle">
 </map>
 
 </div>
   </body>
   </html>
+
+
 
 
 
