Added links to all of the towns and cities on the maps

--- a/client/public/blagoevgrad-map.html
+++ b/client/public/blagoevgrad-map.html
@@ -17,12 +17,12 @@
   <area target="" alt="Кафяви въглища до Симитли" title="Кафяви въглища до Симитли" href="" coords="187,196,208,174" shape="rect">
   <area target="" alt="Кафяви въглища до Разлог" title="Кафяви въглища до Разлог" href="" coords="277,146,299,125" shape="rect">
   <area target="" alt="Слюда до Благоевград" title="Слюда до Благоевград" href="" coords="188,134,209,115" shape="rect">
-  <area target="" alt="Сандански" title="Сандански" href="" coords="239,359,18" shape="circle">
-  <area target="" alt="Кресна" title="Кресна" href="" coords="153,263,17" shape="circle">
-  <area target="" alt="Банско" title="Банско" href="" coords="292,222,17" shape="circle">
-  <area target="" alt="Симитли" title="Симитли" href="" coords="138,187,17" shape="circle">
-  <area target="" alt="Разлог" title="Разлог" href="" coords="268,174,17" shape="circle">
-  <area target="" alt="Благоевград" title="Благоевград" href="" coords="140,163,153,136,182,121,154,108,140,82,125,108,100,121,128,134" shape="poly">
+  <area target="" alt="Сандански" title="Сандански" href="https://sandanski.bg/" coords="239,359,18" shape="circle">
+  <area target="" alt="Кресна" title="Кресна" href="https://kresna-bg.com/" coords="153,263,17" shape="circle">
+  <area target="" alt="Банско" title="Банско" href="https://bansko.bg/bg/" coords="292,222,17" shape="circle">
+  <area target="" alt="Симитли" title="Симитли" href="https://simitli.bg/" coords="138,187,17" shape="circle">
+  <area target="" alt="Разлог" title="Разлог" href="https://razlog.bg/wps/portal/municipality-razlog" coords="268,174,17" shape="circle">
+  <area target="" alt="Благоевград" title="Благоевград" href="https://blagoevgrad.bg/" coords="140,163,153,136,182,121,154,108,140,82,125,108,100,121,128,134" shape="poly">
 </map>
 
 </div>
