--- a/client/public/burgas-map.html
+++ b/client/public/burgas-map.html
@@ -18,11 +18,11 @@
     <area target="" alt="Мрамор до Малко Търново" title="Мрамор до Малко Търново" href="" coords="337,460,361,437" shape="rect">
     <area target="" alt="Кафяви въглища до Бургас" title="Антрацитни въглища до Бургас" href="" coords="329,191,355,165" shape="rect">
     <area target="" alt="Варовик до Айтос" title="Варовик до Айтос" href="" coords="292,150,329,132" shape="rect">
-    <area target="" alt="Малко Търново" title="Малко Търново" href="" coords="375,488,17" shape="circle">
-    <area target="" alt="Созопол" title="Созопол" href="" coords="410,295,16" shape="circle">
-    <area target="" alt="Айтос" title="Айтос" href="" coords="272,152,16" shape="circle">
-    <area target="" alt="Карнобат" title="Карнобат" href="" coords="195,176,16" shape="circle">
-    <area target="" alt="Бургас" title="Бургас" href="" coords="340,282,353,253,383,237,354,222,339,195,325,222,296,237,324,251" shape="poly">
+    <area target="" alt="Малко Търново" title="Малко Търново" href="https://malko-tarnovo.com/" coords="375,488,17" shape="circle">
+    <area target="" alt="Созопол" title="Созопол" href="https://sozopol.bg/" coords="410,295,16" shape="circle">
+    <area target="" alt="Айтос" title="Айтос" href="https://aytos.bg/" coords="272,152,16" shape="circle">
+    <area target="" alt="Карнобат" title="Карнобат" href="https://www.karnobat-ob.bg/" coords="195,176,16" shape="circle">
+    <area target="" alt="Бургас" title="Бургас" href="https://www.burgas.bg/bg/" coords="340,282,353,253,383,237,354,222,339,195,325,222,296,237,324,251" shape="poly">
 </map>
 
 </div>
