--- a/client/public/dobrich-map.html
+++ b/client/public/dobrich-map.html
@@ -18,10 +18,10 @@
     <area target="" alt="Манганова руда до Шабла" title="Манганова руда до Шабла" href="" coords="471,272,488,273,486,257,478,263,470,257" shape="poly">
     <area target="" alt="Нефт до Шабла" title="Нефт до Шабла" href="" coords="496,283,511,285,506,267,500,265" shape="poly">
     <area target="" alt="Природен газ до Шабла" title="Природен газ до Шабла" href="" coords="519,275,537,276,531,257,525,258" shape="poly">
-    <area target="" alt="Балчик" title="Балчик" href="" coords="359,310,15" shape="circle">
-    <area target="" alt="Шабла" title="Шабла" href="" coords="497,240,16" shape="circle">
-    <area target="" alt="Тервел" title="Тервел" href="" coords="87,168,15" shape="circle">
-    <area target="" alt="Добрич" title="Добрич" href="" coords="240,276,251,253,271,242,251,230,240,209,231,231,210,242,231,253" shape="poly">
+    <area target="" alt="Балчик" title="Балчик" href="https://www.balchik.bg/" coords="359,310,15" shape="circle">
+    <area target="" alt="Шабла" title="Шабла" href="https://shabla.bg/" coords="497,240,16" shape="circle">
+    <area target="" alt="Тервел" title="Тервел" href="https://www.tervel.bg/" coords="87,168,15" shape="circle">
+    <area target="" alt="Добрич" title="Добрич" href="https://www.dobrich.bg/bg/" coords="240,276,251,253,271,242,251,230,240,209,231,231,210,242,231,253" shape="poly">
 </map>
 
 </div>
