--- a/client/public/haskovo-map.html
+++ b/client/public/haskovo-map.html
@@ -17,13 +17,13 @@
     <area target="" alt="Оловно-цинкова руда в община Свиленград" title="Оловно-цинкова руда в община Свиленград" href="" coords="597,260,13" shape="circle">
     <area target="" alt="Многометална руда до Маджарово (на север от Ивайловград)" title="Многометална руда до Маджарово (на север от Ивайловград)" href="" coords="345,396,13" shape="circle">
     <area target="" alt="Барит до Тополовград" title="Барит до Тополовград" href="" coords="585,177,610,177,596,155" shape="poly">
-    <area target="" alt="Ивайловград" title="Ивайловград" href="" coords="451,458,19" shape="circle">
-    <area target="" alt="Свиленград" title="Свиленград" href="" coords="490,309,19" shape="circle">
-    <area target="" alt="Тополвград" title="Тополвград" href="" coords="558,132,19" shape="circle">
-    <area target="" alt="Харманли" title="Харманли" href="" coords="364,235,19" shape="circle">
-    <area target="" alt="Симеоновград" title="Симеоновград" href="" coords="333,155,19" shape="circle">
-    <area target="" alt="Димитровград" title="Димитровград" href="" coords="229,150,19" shape="circle">
-    <area target="" alt="Хасково" title="Хасково" href="" coords="205,273,217,247,246,230,218,216,205,185,189,215,161,229,190,245" shape="poly">
+    <area target="" alt="Ивайловград" title="Ивайловград" href="https://ivaylovgrad.bg/" coords="451,458,19" shape="circle">
+    <area target="" alt="Свиленград" title="Свиленград" href="https://www.svilengrad.bg/bg/" coords="490,309,19" shape="circle">
+    <area target="" alt="Тополвград" title="Тополвград" href="https://topolovgrad.bg/" coords="558,132,19" shape="circle">
+    <area target="" alt="Харманли" title="Харманли" href="https://www.harmanli.bg/bg/" coords="364,235,19" shape="circle">
+    <area target="" alt="Симеоновград" title="Симеоновград" href="https://www.simeonovgrad.bg/" coords="333,155,19" shape="circle">
+    <area target="" alt="Димитровград" title="Димитровград" href="https://www.dimitrovgrad.bg/bg/" coords="229,150,19" shape="circle">
+    <area target="" alt="Хасково" title="Хасково" href="https://bg.wikipedia.org/wiki/%D0%A5%D0%B0%D1%81%D0%BA%D0%BE%D0%B2%D0%BE" coords="205,273,217,247,246,230,218,216,205,185,189,215,161,229,190,245" shape="poly">
 </map>
 
 </div>
