--- a/client/public/kardzhali-map.html
+++ b/client/public/kardzhali-map.html
@@ -22,10 +22,10 @@
     <area target="" alt="Фелдшпат в община Ардино" title="Фелдшпат в община Ардино" href="" coords="179,278,199,265,179,251,160,266" shape="poly">
     <area target="" alt="Зеолит между Джебел и Ардино" title="Зеолит между Джебел и Ардино" href="" coords="191,388,205,362,177,362" shape="poly">
     <area target="" alt="Зеолит до Кърджали" title="Зеолит до Кърджали" href="" coords="308,232,321,206,296,206" shape="poly">
-    <area target="" alt="Крумовград" title="Крумовград" href="" coords="485,431,20" shape="circle">
-    <area target="" alt="Джебел" title="Джебел" href="" coords="230,401,20" shape="circle">
-    <area target="" alt="Ардино" title="Ардино" href="" coords="137,326,22" shape="circle">
-    <area target="" alt="Кърджали" title="Кърджали" href="" coords="292,328,306,296,337,281,308,262,290,234,274,263,245,279,275,294" shape="poly">
+    <area target="" alt="Крумовград" title="Крумовград" href="https://www.krumovgrad.bg/" coords="485,431,20" shape="circle">
+    <area target="" alt="Джебел" title="Джебел" href="https://dzhebel.bg/" coords="230,401,20" shape="circle">
+    <area target="" alt="Ардино" title="Ардино" href="https://www.ardino.bg/" coords="137,326,22" shape="circle">
+    <area target="" alt="Кърджали" title="Кърджали" href="https://kardjali.bg/" coords="292,328,306,296,337,281,308,262,290,234,274,263,245,279,275,294" shape="poly">
 </map>
 
 </div>
