--- a/client/public/kyustendil-map.html
+++ b/client/public/kyustendil-map.html
@@ -13,11 +13,11 @@
 <map name="image-map">
     <area target="" alt="Слюда в община Рила" title="Слюда в община Рила" href="" coords="491,328,510,311" shape="rect">
     <area target="" alt="Оловно-цинкова руда в община Кюстендил" title="Оловно-цинкова руда в община Кюстендил" href="" coords="91,236,10" shape="circle">
-    <area target="" alt="Рила" title="Рила" href="" coords="399,328,13" shape="circle">
-    <area target="" alt="Сапарева баня" title="Сапарева баня" href="" coords="449,252,14" shape="circle">
-    <area target="" alt="Дупница" title="Дупница" href="" coords="380,268,13" shape="circle">
-    <area target="" alt="Бобов дол" title="Бобов дол" href="" coords="321,200,13" shape="circle">
-    <area target="" alt="Кюстендил" title="Кюстендил" href="" coords="196,259,207,234,235,222,210,211,196,187,183,210,159,221,184,235" shape="poly">
+    <area target="" alt="Рила" title="Рила" href="https://bg.wikipedia.org/wiki/%D0%A0%D0%B8%D0%BB%D0%B0_(%D0%B3%D1%80%D0%B0%D0%B4)" coords="399,328,13" shape="circle">
+    <area target="" alt="Сапарева баня" title="Сапарева баня" href="https://bg.wikipedia.org/wiki/%D0%A1%D0%B0%D0%BF%D0%B0%D1%80%D0%B5%D0%B2%D0%B0_%D0%B1%D0%B0%D0%BD%D1%8F" coords="449,252,14" shape="circle">
+    <area target="" alt="Дупница" title="Дупница" href="https://www.dupnitsa.bg/" coords="380,268,13" shape="circle">
+    <area target="" alt="Бобов дол" title="Бобов дол" href="https://bobovdol.egov.bg/wps/portal/municipality-bobovdol/home" coords="321,200,13" shape="circle">
+    <area target="" alt="Кюстендил" title="Кюстендил" href="https://kyustendil.bg/index.php?lang=bg" coords="196,259,207,234,235,222,210,211,196,187,183,210,159,221,184,235" shape="poly">
 </map>
 
 </div>
