--- a/client/public/pernik-map.html
+++ b/client/public/pernik-map.html
@@ -18,10 +18,10 @@
     <area target="" alt="Огнеупорни глини на север от Земен" title="Огнеупорни глини на север от Земен" href="" coords="245,316,276,304" shape="rect">
     <area target="" alt="Злато в/до Трън" title="Злато в/до Трън" href="" coords="163,119,11" shape="circle">
     <area target="" alt="Барит до Трън" title="Барит до Трън" href="" coords="244,150,262,151,252,132" shape="poly">
-    <area target="" alt="Радомир" title="Радомир" href="" coords="362,311,16" shape="circle">
-    <area target="" alt="Земен" title="Земен" href="" coords="233,335,16" shape="circle">
-    <area target="" alt="Трън" title="Трън" href="" coords="195,102,16" shape="circle">
-    <area target="" alt="Перник" title="Перник" href="" coords="398,293,410,267,436,254,410,240,400,212,385,242,361,254,386,267" shape="poly">
+    <area target="" alt="Радомир" title="Радомир" href="https://radomir.bg/" coords="362,311,16" shape="circle">
+    <area target="" alt="Земен" title="Земен" href="https://zemen-bg.com/" coords="233,335,16" shape="circle">
+    <area target="" alt="Трън" title="Трън" href="https://tran.bg/site/news.php" coords="195,102,16" shape="circle">
+    <area target="" alt="Перник" title="Перник" href="https://pernik.bg/" coords="398,293,410,267,436,254,410,240,400,212,385,242,361,254,386,267" shape="poly">
 </map>
 
 </div>
