--- a/client/public/pleven-map.html
+++ b/client/public/pleven-map.html
@@ -16,13 +16,13 @@
     <area target="" alt="Огнеупорни глини много над Плевен" title="Огнеупорни глини много над Плевен" href="" coords="296,134,328,147" shape="rect">
     <area target="" alt="Нефт до Голям Дъбник" title="Нефт до Голям Дъбник" href="" coords="192,268,207,266,203,241,197,241" shape="poly">
     <area target="" alt="Нефт до р. Дунав" title="Нефт до р. Дунав" href="" coords="257,84,270,84,266,60,260,60" shape="poly">
-    <area target="" alt="Кнежа" title="Кнежа" href="" coords="77,222,9" shape="circle">
-    <area target="" alt="Червен бряг" title="Червен бряг" href="" coords="79,350,10" shape="circle">
-    <area target="" alt="Долни Дъбник" title="Долни Дъбник" href="" coords="228,270,9" shape="circle">
-    <area target="" alt="Никопол" title="Никопол" href="" coords="441,96,9" shape="circle">
-    <area target="" alt="Белене" title="Белене" href="" coords="552,130,9" shape="circle">
-    <area target="" alt="Левски" title="Левски" href="" coords="554,300,9" shape="circle">
-    <area target="" alt="Плевен" title="Плевен" href="" coords="314,291,318,281,322,276,327,272,335,269,320,264,314,248,308,262,294,269,304,274" shape="poly">
+    <area target="" alt="Кнежа" title="Кнежа" href="https://kneja.acstre.com/" coords="77,222,9" shape="circle">
+    <area target="" alt="Червен бряг" title="Червен бряг" href="https://www.chervenbryag.bg/" coords="79,350,10" shape="circle">
+    <area target="" alt="Долни Дъбник" title="Долни Дъбник" href="https://dolnidabnik.egov.bg/wps/portal/municipality-dolnidabnik/home" coords="228,270,9" shape="circle">
+    <area target="" alt="Никопол" title="Никопол" href="https://www.nikopol-bg.com/" coords="441,96,9" shape="circle">
+    <area target="" alt="Белене" title="Белене" href="https://belene.bg/" coords="552,130,9" shape="circle">
+    <area target="" alt="Левски" title="Левски" href="https://bg.wikipedia.org/wiki/%D0%9B%D0%B5%D0%B2%D1%81%D0%BA%D0%B8_(%D0%B3%D1%80%D0%B0%D0%B4)" coords="554,300,9" shape="circle">
+    <area target="" alt="Плевен" title="Плевен" href="https://www.pleven.bg/bg/" coords="314,291,318,281,322,276,327,272,335,269,320,264,314,248,308,262,294,269,304,274" shape="poly">
 </map>
 
 </div>
