--- a/client/public/plovdiv-map.html
+++ b/client/public/plovdiv-map.html
@@ -14,12 +14,12 @@
     <area target="" alt="Оловно-цинкова руда до Лъки" title="Оловно-цинкова руда до Лъки" href="" coords="203,609,15" shape="circle">
     <area target="" alt="Оловно-цинкова руда на север от Лъки" title="Оловно-цинкова руда на север от Лъки" href="" coords="252,545,14" shape="circle">
     <area target="" alt="Хромова руда до Асеновград" title="Хромова руда до Асеновград" href="" coords="294,483,269,459" shape="rect">
-    <area target="" alt="Лъки" title="Лъки" href="" coords="217,570,20" shape="circle">
-    <area target="" alt="Асеновград" title="Асеновград" href="" coords="240,457,19" shape="circle">
-    <area target="" alt="Перущица" title="Перущица" href="" coords="94,427,20" shape="circle">
-    <area target="" alt="Хисаря" title="Хисаря" href="" coords="145,191,20" shape="circle">
-    <area target="" alt="Карлово" title="Карлово" href="" coords="221,121,20" shape="circle">
-    <area target="" alt="Пловдив" title="Пловдив" href="" coords="168,428,184,395,213,379,183,363,169,332,153,363,123,378,153,393" shape="poly">
+    <area target="" alt="Лъки" title="Лъки" href="https://www.oblaki.com/main.php" coords="217,570,20" shape="circle">
+    <area target="" alt="Асеновград" title="Асеновград" href="https://www.asenovgrad.bg/bg/" coords="240,457,19" shape="circle">
+    <area target="" alt="Перущица" title="Перущица" href="https://perushtitsa.egov.bg/wps/portal/municipality-perushtitsa/municipality/municipality-characteristics/geographical.characteristics" coords="94,427,20" shape="circle">
+    <area target="" alt="Хисаря" title="Хисаря" href="https://bg.wikipedia.org/wiki/%D0%A5%D0%B8%D1%81%D0%B0%D1%80%D1%8F" coords="145,191,20" shape="circle">
+    <area target="" alt="Карлово" title="Карлово" href="https://www.karlovo.bg/" coords="221,121,20" shape="circle">
+    <area target="" alt="Пловдив" title="Пловдив" href="https://www.plovdiv.bg/" coords="168,428,184,395,213,379,183,363,169,332,153,363,123,378,153,393" shape="poly">
 </map>
 
 </div>
