--- a/client/public/razgrad-map.html
+++ b/client/public/razgrad-map.html
@@ -12,12 +12,12 @@
 <map name="image-map">
     <area target="" alt="Кварцови пясъци до Разград" title="Кварцови пясъци до Разград" href="" coords="205,321,241,333" shape="rect">
     <area target="" alt="Каолин над Разград" title="Каолин над Разград" href="" coords="173,235,11" shape="circle">
-    <area target="" alt="Позница" title="Позница" href="" coords="263,378,11" shape="circle">
-    <area target="" alt="Цар Калоян" title="Цар Калоян" href="" coords="82,243,11" shape="circle">
-    <area target="" alt="Исперих" title="Исперих" href="" coords="368,174,11" shape="circle">
-    <area target="" alt="Завет" title="Завет" href="" coords="280,142,12" shape="circle">
-    <area target="" alt="Кубрат" title="Кубрат" href="" coords="205,104,11" shape="circle">
-    <area target="" alt="Разград" title="Разград" href="" coords="244,315,253,295,273,284,254,274,244,255,234,274,214,285,233,294" shape="poly">
+    <area target="" alt="Лозница" title="Лозница" href="https://loznitsa.bg/" coords="263,378,11" shape="circle">
+    <area target="" alt="Цар Калоян" title="Цар Калоян" href="https://tsarkaloyan.bg/" coords="82,243,11" shape="circle">
+    <area target="" alt="Исперих" title="Исперих" href="https://www.isperih.bg/" coords="368,174,11" shape="circle">
+    <area target="" alt="Завет" title="Завет" href="https://zavet-bg.com/zavetbgcom/news.php" coords="280,142,12" shape="circle">
+    <area target="" alt="Кубрат" title="Кубрат" href="https://www.kubrat.bg/" coords="205,104,11" shape="circle">
+    <area target="" alt="Разград" title="Разград" href="https://www.razgrad.bg/" coords="244,315,253,295,273,284,254,274,244,255,234,274,214,285,233,294" shape="poly">
 </map>
 
 </div>
