--- a/client/public/smolyan-map.html
+++ b/client/public/smolyan-map.html
@@ -16,13 +16,13 @@
     <area target="" alt="Оловно-цинкова руда до Смолян" title="Оловно-цинкова руда до Смолян" href="" coords="372,392,11" shape="circle">
     <area target="" alt="Оловно-цинкова руда на юг от Мадан" title="Оловно-цинкова руда на юг от Мадан" href="" coords="532,420,11" shape="circle">
     <area target="" alt="Оловно-цинкова руда на север от Мадан" title="Оловно-цинкова руда на север от Мадан" href="" coords="542,346,11" shape="circle">
-    <area target="" alt="Златоград" title="Златоград" href="" coords="611,480,16" shape="circle">
-    <area target="" alt="Неделино" title="Неделино" href="" coords="607,416,15" shape="circle">
-    <area target="" alt="Мадан" title="Мадан" href="" coords="547,394,14" shape="circle">
-    <area target="" alt="Рудозем" title="Рудозем" href="" coords="480,401,15" shape="circle">
-    <area target="" alt="Чепеларе" title="Чепеларе" href="" coords="394,225,15" shape="circle">
-    <area target="" alt="Девин" title="Девин" href="" coords="237,212,16" shape="circle">
-    <area target="" alt="Смолян" title="Смолян" href="" coords="395,384,406,358,430,345,406,332,394,308,382,333,357,344,381,357" shape="poly">
+    <area target="" alt="Златоград" title="Златоград" href="https://www.zlatograd.bg/" coords="611,480,16" shape="circle">
+    <area target="" alt="Неделино" title="Неделино" href="https://nedelino.bg/" coords="607,416,15" shape="circle">
+    <area target="" alt="Мадан" title="Мадан" href="https://www.madan.bg/" coords="547,394,14" shape="circle">
+    <area target="" alt="Рудозем" title="Рудозем" href="https://www.rudozem.bg/" coords="480,401,15" shape="circle">
+    <area target="" alt="Чепеларе" title="Чепеларе" href="https://bg.wikipedia.org/wiki/%D0%A7%D0%B5%D0%BF%D0%B5%D0%BB%D0%B0%D1%80%D0%B5" coords="394,225,15" shape="circle">
+    <area target="" alt="Девин" title="Девин" href="https://www.devin.bg/" coords="237,212,16" shape="circle">
+    <area target="" alt="Смолян" title="Смолян" href="https://www.smolyan.bg/" coords="395,384,406,358,430,345,406,332,394,308,382,333,357,344,381,357" shape="poly">
 </map>
 
 </div>
