--- a/client/public/sofia-region-map.html
+++ b/client/public/sofia-region-map.html
@@ -17,12 +17,12 @@
     <area target="" alt="Медна руда в района на Пирдоп и Златица" title="Медна руда в района на Пирдоп и Златица" href="" coords="460,238,493,224" shape="rect">
     <area target="" alt="Антрацитни въглища до Своге" title="Антрацитни въглища до Своге" href="" coords="177,155,198,133" shape="rect">
     <area target="" alt="Огнеупорни глини до Елин Пелин" title="Огнеупорни глини до Елин Пелин" href="" coords="307,245,342,232" shape="rect">
-    <area target="" alt="Самоков" title="Самоков" href="" coords="269,402,17" shape="circle">
-    <area target="" alt="Елин Пелин" title="Елин Пелин" href="" coords="290,264,17" shape="circle">
-    <area target="" alt="Пирдоп" title="Пирдоп" href="" coords="459,260,18" shape="circle">
-    <area target="" alt="Своге" title="Своге" href="" coords="216,132,16" shape="circle">
-    <area target="" alt="Драгоман" title="Драгоман" href="" coords="92,160,17" shape="circle">
-    <area target="" alt="Годеч" title="Годеч" href="" coords="127,119,17" shape="circle">
+    <area target="" alt="Самоков" title="Самоков" href="https://www.samokov.bg/" coords="269,402,17" shape="circle">
+    <area target="" alt="Елин Пелин" title="Елин Пелин" href="https://www.elinpelin.org/" coords="290,264,17" shape="circle">
+    <area target="" alt="Пирдоп" title="Пирдоп" href="https://www.pirdop.bg/bg/" coords="459,260,18" shape="circle">
+    <area target="" alt="Своге" title="Своге" href="https://www.svoge.bg/" coords="216,132,16" shape="circle">
+    <area target="" alt="Драгоман" title="Драгоман" href="https://www.obshtinadragoman.com/" coords="92,160,17" shape="circle">
+    <area target="" alt="Годеч" title="Годеч" href="https://www.godech.bg/" coords="127,119,17" shape="circle">
 </map>
 
 </div>
