--- a/client/public/stara-zagora-map.html
+++ b/client/public/stara-zagora-map.html
@@ -15,14 +15,14 @@
     <area target="" alt="Варовик до Стара Загора" title="Варовик до Стара Загора" href="" coords="240,200,271,211" shape="rect">
     <area target="" alt="Кафяви въглища до Гурково" title="Кафяви въглища до Гурково" href="" coords="348,54,366,37" shape="rect">
     <area target="" alt="Барит до Мъглиж" title="Барит до Мъглиж" href="" coords="293,166,312,166,302,146" shape="poly">
-    <area target="" alt="Гълъбово" title="Гълъбово" href="" coords="383,377,13" shape="circle">
-    <area target="" alt="Чирпан" title="Чирпан" href="" coords="184,359,13" shape="circle">
-    <area target="" alt="Раднево" title="Раднево" href="" coords="412,302,14" shape="circle">
-    <area target="" alt="Павел баня" title="Павел баня" href="" coords="103,148,13" shape="circle">
-    <area target="" alt="Казанлък" title="Казанлък" href="" coords="205,117,13" shape="circle">
-    <area target="" alt="Мъглиж" title="Мъглиж" href="" coords="271,119,14" shape="circle">
-    <area target="" alt="Гурково" title="Гурково" href="" coords="359,87,14" shape="circle">
-    <area target="" alt="Стара Загора" title="Стара Загора" href="" coords="310,260,319,240,340,228,320,216,310,197,300,219,279,228,297,237" shape="poly">
+    <area target="" alt="Гълъбово" title="Гълъбово" href="https://www.sz.government.bg/municipality-galabovo" coords="383,377,13" shape="circle">
+    <area target="" alt="Чирпан" title="Чирпан" href="https://www.chirpan.bg/bg/" coords="184,359,13" shape="circle">
+    <area target="" alt="Раднево" title="Раднево" href="https://radnevo.bg/" coords="412,302,14" shape="circle">
+    <area target="" alt="Павел баня" title="Павел баня" href="https://bg.wikipedia.org/wiki/%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%B1%D0%B0%D0%BD%D1%8F" coords="103,148,13" shape="circle">
+    <area target="" alt="Казанлък" title="Казанлък" href="https://kazanlak.com/" coords="205,117,13" shape="circle">
+    <area target="" alt="Мъглиж" title="Мъглиж" href="https://maglizh.bg/" coords="271,119,14" shape="circle">
+    <area target="" alt="Гурково" title="Гурково" href="https://gurkovo.bg/" coords="359,87,14" shape="circle">
+    <area target="" alt="Стара Загора" title="Стара Загора" href="https://www.starazagora.bg/bg/" coords="310,260,319,240,340,228,320,216,310,197,300,219,279,228,297,237" shape="poly">
 </map>
 
 </div>
