--- a/client/public/targovishte-map.html
+++ b/client/public/targovishte-map.html
@@ -12,11 +12,11 @@
 <map name="image-map">
     <area target="" alt="Варовик до Опака" title="Варовик до Опака" href="" coords="157,135,196,149" shape="rect">
     <area target="" alt="Каменна сол до Омуртаг" title="Каменна сол до Омуртаг" href="" coords="275,385,288,381,301,386,301,400,288,406,276,402" shape="poly">
-    <area target="" alt="Омуртаг" title="Омуртаг" href="" coords="279,353,12" shape="circle">
-    <area target="" alt="Антоново" title="Антоново" href="" coords="150,302,12" shape="circle">
-    <area target="" alt="Попово" title="Попово" href="" coords="181,177,12" shape="circle">
-    <area target="" alt="Опака" title="Опака" href="" coords="143,102,11" shape="circle">
-    <area target="" alt="Търговище" title="Търговище" href="" coords="347,273,356,253,376,243,356,234,347,216,338,235,319,244,339,253" shape="poly">
+    <area target="" alt="Омуртаг" title="Омуртаг" href="https://www.omurtag.bg/" coords="279,353,12" shape="circle">
+    <area target="" alt="Антоново" title="Антоново" href="https://antonovo.bg/" coords="150,302,12" shape="circle">
+    <area target="" alt="Попово" title="Попово" href="https://popovo.bg/bg/" coords="181,177,12" shape="circle">
+    <area target="" alt="Опака" title="Опака" href="https://opaka.bg/" coords="143,102,11" shape="circle">
+    <area target="" alt="Търговище" title="Търговище" href="https://targovishtebg.com/" coords="347,273,356,253,376,243,356,234,347,216,338,235,319,244,339,253" shape="poly">
 </map>
 
 </div>
