--- a/client/public/vidin-map.html
+++ b/client/public/vidin-map.html
@@ -12,13 +12,13 @@
 <map name="image-map">
     <area target="" alt="Варовик до Ново село" title="Варовик до Ново село" href="" coords="203,84,243,68" shape="rect">
     <area target="" alt="Гипс до Кошава" title="Гипс до Кошава" href="" coords="325,125,357,126,355,133,351,138,346,142,335,140,328,134" shape="poly">
-    <area target="" alt="Белоградчик" title="Белоградчик" href="" coords="177,402,15" shape="circle">
-    <area target="" alt="Димово" title="Димово" href="" coords="222,334,15" shape="circle">
-    <area target="" alt="Грамада" title="Грамада" href="" coords="191,260,16" shape="circle">
-    <area target="" alt="Кула" title="Кула" href="" coords="123,246,16" shape="circle">
-    <area target="" alt="Брегово" title="Брегово" href="" coords="185,83,15" shape="circle">
-    <area target="" alt="Ново село" title="Ново село" href="" coords="259,94,16" shape="circle">
-    <area target="" alt="Видин" title="Видин" href="" coords="266,214,281,187,305,174,283,160,266,135,252,157,227,173,255,191" shape="poly">
+    <area target="" alt="Белоградчик" title="Белоградчик" href="https://visitbelogradchik.com/" coords="177,402,15" shape="circle">
+    <area target="" alt="Димово" title="Димово" href="https://vidin.government.bg/obshtina-dimovo" coords="222,334,15" shape="circle">
+    <area target="" alt="Грамада" title="Грамада" href="https://vidin.government.bg/obshtina-gramada" coords="191,260,16" shape="circle">
+    <area target="" alt="Кула" title="Кула" href="https://vidin.government.bg/obshtina-kula" coords="123,246,16" shape="circle">
+    <area target="" alt="Брегово" title="Брегово" href="https://bregovo.bg/" coords="185,83,15" shape="circle">
+    <area target="" alt="Ново село" title="Ново село" href="https://obshtina-novoselo.com/bg/" coords="259,94,16" shape="circle">
+    <area target="" alt="Видин" title="Видин" href="https://vidin.bg/wps/portal/vidin-municipality/home/!ut/p/z1/04_Sj9CPykssy0xPLMnMz0vMAfIjo8ziPQItHA39LYy83V09LAwCjRydjP3dQt1Dwwz1wwkpiAJKG-AAjgZA_VFgJThMMAoxhSrAY0ZBboRBpqOiIgBP8TNt/dz/d5/L2dBISEvZ0FBIS9nQSEh/" coords="266,214,281,187,305,174,283,160,266,135,252,157,227,173,255,191" shape="poly">
 </map>
 </div>
   </body>
