--- a/client/public/montana-map.html
+++ b/client/public/montana-map.html
@@ -13,11 +13,11 @@
     <area target="" alt="Лигнитни въглища до Лом" title="Лигнитни въглища до Лом" href="" coords="234,119,250,103" shape="rect">
     <area target="" alt="Злато до Монтана" title="Злато до Монтана" href="" coords="242,326,10" shape="circle">
     <area target="" alt="Олово-цинкова руда до Чипровци" title="Олово-цинкова руда до Чипровци" href="" coords="80,407,12" shape="circle">
-    <area target="" alt="Лом" title="Лом" href="" coords="263,88,16" shape="circle">
-    <area target="" alt="Вълчедръм" title="Вълчедръм" href="" coords="355,137,16" shape="circle">
-    <area target="" alt="Брусарци" title="Брусарци" href="" coords="165,205,16" shape="circle">
-    <area target="" alt="Чипровци" title="Чипровци" href="" coords="54,383,16" shape="circle">
-    <area target="" alt="Монтана" title="Монтана" href="" coords="263,416,276,388,302,373,278,359,261,332,248,358,220,373,249,389,260,411" shape="poly">
+    <area target="" alt="Лом" title="Лом" href="https://www.lom.bg/" coords="263,88,16" shape="circle">
+    <area target="" alt="Вълчедръм" title="Вълчедръм" href="https://bg.wikipedia.org/wiki/%D0%92%D1%8A%D0%BB%D1%87%D0%B5%D0%B4%D1%80%D1%8A%D0%BC" coords="355,137,16" shape="circle">
+    <area target="" alt="Брусарци" title="Брусарци" href="https://brusartsi.com/" coords="165,205,16" shape="circle">
+    <area target="" alt="Чипровци" title="Чипровци" href="https://www.chiprovtsi.bg/" coords="54,383,16" shape="circle">
+    <area target="" alt="Монтана" title="Монтана" href="https://www.montana.bg/" coords="263,416,276,388,302,373,278,359,261,332,248,358,220,373,249,389,260,411" shape="poly">
 </map>
 </div>
 </body>
