--- a/client/public/pazardzhik-map.html
+++ b/client/public/pazardzhik-map.html
@@ -15,12 +15,12 @@
     <area target="" alt="Медна руда под Панагюрище" title="Медна руда под Панагюрище" href="" coords="284,224,321,208" shape="rect">
     <area target="" alt="Медна руда над Панагюрище" title="Медна руда над Панагюрище" href="" coords="291,125,328,109" shape="rect">
     <area target="" alt="Фелдшпат" title="Фелдшпат" href="" coords="130,451,149,440,131,428,114,439" shape="poly">
-    <area target="" alt="Сърница" title="Сърница" href="" coords="194,604,14" shape="circle">
-    <area target="" alt="Батак" title="Батак" href="" coords="275,482,14" shape="circle">
-    <area target="" alt="Велинград" title="Велинград" href="" coords="173,420,14" shape="circle">
-    <area target="" alt="Септември" title="Септември" href="" coords="242,315,14" shape="circle">
-    <area target="" alt="Панагюрище" title="Панагюрище" href="" coords="239,147,14" shape="circle">
-    <area target="" alt="Пазарджик" title="Пазарджик" href="" coords="321,361,333,338,356,324,332,312,323,287,309,314,285,325,308,336" shape="poly">
+    <area target="" alt="Сърница" title="Сърница" href="https://www.sarnitsa.com/" coords="194,604,14" shape="circle">
+    <area target="" alt="Батак" title="Батак" href="https://www.batak.bg/" coords="275,482,14" shape="circle">
+    <area target="" alt="Велинград" title="Велинград" href="https://bg.wikipedia.org/wiki/%D0%92%D0%B5%D0%BB%D0%B8%D0%BD%D0%B3%D1%80%D0%B0%D0%B4" coords="173,420,14" shape="circle">
+    <area target="" alt="Септември" title="Септември" href="https://www.septemvri.bg/" coords="242,315,14" shape="circle">
+    <area target="" alt="Панагюрище" title="Панагюрище" href="https://www.panagyurishte.org/" coords="239,147,14" shape="circle">
+    <area target="" alt="Пазарджик" title="Пазарджик" href="https://pazardzhik.bg/bg/" coords="321,361,333,338,356,324,332,312,323,287,309,314,285,325,308,336" shape="poly">
 </map>
 
 </div>
