--- a/client/public/sliven-map.html
+++ b/client/public/sliven-map.html
@@ -11,10 +11,10 @@
 <img class="centered-flex" src="Сливен.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="" alt="Черни въглища до Твърдица" title="Черни въглища до Твърдица" href="" coords="181,236,203,214" shape="rect">
-    <area target="" alt="Нова Загора" title="Нова Загора" href="" coords="139,375,15" shape="circle">
-    <area target="" alt="Твърдица" title="Твърдица" href="" coords="94,258,15" shape="circle">
-    <area target="" alt="Котел" title="Котел" href="" coords="329,118,15" shape="circle">
-    <area target="" alt="Сливен" title="Сливен" href="" coords="319,307,331,283,355,270,331,259,318,233,305,259,282,271,304,282" shape="poly">
+    <area target="" alt="Нова Загора" title="Нова Загора" href="https://nova-zagora.bg/bg" coords="139,375,15" shape="circle">
+    <area target="" alt="Твърдица" title="Твърдица" href="https://tvarditsa.bg/" coords="94,258,15" shape="circle">
+    <area target="" alt="Котел" title="Котел" href="https://kotel.bg/" coords="329,118,15" shape="circle">
+    <area target="" alt="Сливен" title="Сливен" href="https://mun.sliven.bg/" coords="319,307,331,283,355,270,331,259,318,233,305,259,282,271,304,282" shape="poly">
 </map>
 
 </div>
