--- a/client/public/varna-map.html
+++ b/client/public/varna-map.html
@@ -16,14 +16,14 @@
     <area target="" alt="Каменни соли до Провадия" title="Каменни соли до Провадия" href="" coords="193,302,204,296,218,299,218,315,205,321,192,317" shape="poly">
     <area target="" alt="Манганова руда до Долни чифлик" title="Манганова руда до Долни чифлик" href="" coords="337,394,346,402,356,395,356,413,336,413" shape="poly">
     <area target="" alt="Манганова руда до Аксаково" title="Манганова руда до Аксаково" href="" coords="397,175,415,175,415,157,406,165,395,157" shape="poly">
-    <area target="" alt="Бяла" title="Бяла" href="" coords="373,444,13" shape="circle">
-    <area target="" alt="Долни чифлик" title="Долни чифлик" href="" coords="309,391,13" shape="circle">
-    <area target="" alt="Дългопол" title="Дългопол" href="" coords="157,349,13" shape="circle">
-    <area target="" alt="Провадия" title="Провадия" href="" coords="196,277,13" shape="circle">
-    <area target="" alt="Девня" title="Девня" href="" coords="257,249,13" shape="circle">
-    <area target="" alt="Аксаково" title="Аксаково" href="" coords="343,226,13" shape="circle">
-    <area target="" alt="Вълчи дол" title="Вълчи дол" href="" coords="232,137,13" shape="circle">
-    <area target="" alt="Варна" title="Варна" href="" coords="386,294,396,273,415,262,396,252,386,233,376,253,356,262,375,273" shape="poly">
+    <area target="" alt="Бяла" title="Бяла" href="https://www.byala.org/" coords="373,444,13" shape="circle">
+    <area target="" alt="Долни чифлик" title="Долни чифлик" href="https://dolni-chiflik.acstre.com/" coords="309,391,13" shape="circle">
+    <area target="" alt="Дългопол" title="Дългопол" href="https://www.dalgopol.bg/" coords="157,349,13" shape="circle">
+    <area target="" alt="Провадия" title="Провадия" href="https://www.provadia.bg/" coords="196,277,13" shape="circle">
+    <area target="" alt="Девня" title="Девня" href="https://devnya.bg/" coords="257,249,13" shape="circle">
+    <area target="" alt="Аксаково" title="Аксаково" href="https://aksakovo.bg/" coords="343,226,13" shape="circle">
+    <area target="" alt="Вълчи дол" title="Вълчи дол" href="https://www.valchidol.bg/" coords="232,137,13" shape="circle">
+    <area target="" alt="Варна" title="Варна" href="https://www.varna.bg/" coords="386,294,396,273,415,262,396,252,386,233,376,253,356,262,375,273" shape="poly">
 </map>
 
 </div>
