--- a/client/public/vraca-map.html
+++ b/client/public/vraca-map.html
@@ -15,13 +15,13 @@
     <area target="" alt="АЕЦ в Козлодуй" title="АЕЦ в Козлодуй" href="" coords="258,111,265,107,270,112,270,104,276,102,270,98,272,91,264,95,259,89,259,99,252,101" shape="poly">
     <area target="" alt="Нефт до Бяла Слатина" title="Нефт до Бяла Слатина" href="" coords="344,259,361,259,356,230,348,231" shape="poly">
     <area target="" alt="Гипс до Оряхово" title="Гипс до Оряхово" href="" coords="396,148,399,155,405,161,411,161,419,158,425,155,425,149" shape="poly">
-    <area target="" alt="Козлодуй" title="Козлодуй" href="" coords="241,84,10" shape="circle">
-    <area target="" alt="Оряхово" title="Оряхово" href="" coords="383,129,10" shape="circle">
-    <area target="" alt="Криводол" title="Криводол" href="" coords="126,346,10" shape="circle">
-    <area target="" alt="Бяла Слатина" title="Бяла Слатина" href="" coords="346,288,10" shape="circle">
-    <area target="" alt="Мездра" title="Мездра" href="" coords="229,503,11" shape="circle">
-    <area target="" alt="Роман" title="Роман" href="" coords="331,496,10" shape="circle">
-    <area target="" alt="Враца" title="Враца" href="" coords="167,473,173,465,173,459,180,457,190,452,179,447,173,441,169,431,163,440,157,445,148,451,158,458" shape="poly">
+    <area target="" alt="Козлодуй" title="Козлодуй" href="https://bg.wikipedia.org/wiki/%D0%9A%D0%BE%D0%B7%D0%BB%D0%BE%D0%B4%D1%83%D0%B9" coords="241,84,10" shape="circle">
+    <area target="" alt="Оряхово" title="Оряхово" href="https://oryahovo.egov.bg/wps/portal/municipality-oriahovo/home" coords="383,129,10" shape="circle">
+    <area target="" alt="Криводол" title="Криводол" href="https://www.krivodol.com/" coords="126,346,10" shape="circle">
+    <area target="" alt="Бяла Слатина" title="Бяла Слатина" href="https://byala-slatina.bg/" coords="346,288,10" shape="circle">
+    <area target="" alt="Мездра" title="Мездра" href="https://www.mezdra.bg/" coords="229,503,11" shape="circle">
+    <area target="" alt="Роман" title="Роман" href="https://roman.egov.bg/wps/portal/municipality-roman/home" coords="331,496,10" shape="circle">
+    <area target="" alt="Враца" title="Враца" href="https://www.vratza.bg/" coords="167,473,173,465,173,459,180,457,190,452,179,447,173,441,169,431,163,440,157,445,148,451,158,458" shape="poly">
 </map>
 
 </div>
