Made some minor changes to the info pages

--- a/client/public/info-panels/blagoevgrad-info.html
+++ b/client/public/info-panels/blagoevgrad-info.html
@@ -81,6 +81,7 @@
 
         <div class="chapter" id="chapter9">
             <h2>Мрамор до Кресна</h2>
+            <p>- В големи количества</p>
             <p>- Бял и декоративен мрамор, използван в строителството и скулптурата.</p>
         </div>
 
