--- a/client/public/info-panels/plovdiv-info.html
+++ b/client/public/info-panels/plovdiv-info.html
@@ -70,6 +70,7 @@
             <h2>Асеновград</h2>
             <p>- Град, известен с историческите си забележителности и традиции във винопроизводството</p>
             <p>- Асеновата крепост и Бачковският манастир, който е вторият по големина манастир в България, са от най-посещаваните забележителности в района</p>
+            <p>- Най-големият по площ необластен град в България</p>
         </div>
 
         <div class="chapter" id="chapter8">
